istio-basics/labs/05/typicode-se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: typicode-svc-https
spec:
  hosts:
  - jsonplaceholder.typicode.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS
