istio-basics/labs/05/web-api-gw-vs-fault-injection.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-api-gw-vs
spec:
  hosts:
  - "istioinaction.io"
  gateways:
  - web-api-gateway
  http:
  - fault:
      delay:
        fixedDelay: 90s
        percent: 100
    match:
    - headers:
        user:
          exact: Jason
    route:
    - destination:
        host: web-api.istioinaction.svc.cluster.local
        port:
          number: 8080
  - route:
    - destination:
        host: web-api.istioinaction.svc.cluster.local
        port:
          number: 8080
